# yanoid

./: AUTHORS  CREDITS  ChangeLog  Makefile.am  NEWS  README  TODO  bootstrap  buildrpm.sh  configure.ac  configure.in  yanoid.spec.in
config/: kde_check_python.m4  mbd_check_python.m4
data/: Makefile.am
data/graphics/: Makefile.am
data/graphics/balls/: Makefile.am
data/graphics/bricks/: Makefile.am
data/graphics/fonts/: Makefile.am
data/graphics/objects/: Makefile.am
data/graphics/paddles/: Makefile.am
data/graphics/powerups/: Makefile.am
data/graphics/shots/: Makefile.am
data/maps/: Makefile.am  map0.py  map1.py  map2.py  map3.py  map4.py  map5.py  map6.py  map7.py  map8.py  map9.py  maplist.py
data/music/: Makefile.am  yanoid.mod  yanoid.xm
data/objects/: Makefile.am  basic_brick.py  default.py  powerups.py
data/scripts/: Makefile.am  client_interface.py  game_interface.py  map_interface.py  yanoid.py
data/sounds/: Makefile.am
doc/: Design.fig  Design.txt  Design2.fig  Graphics.txt  Multiplayer.txt  WhatGoesIntoAMap.txt  codingstyle_example.cc  source_head
src/: Makefile.am  client.cc  client.hh  config.h.in  console.cc  console.hh  debug.cc  debug.hh  display.cc  display.hh  effects.cc  effects.hh  entity.cc  entity.hh  fontmanager.cc  fontmanager.hh  game.cc  game.hh  globals.cc  globals.hh  highscore.cc  highscore.hh  imageeffects.cc  imageeffects.hh  interprenter.cc  interprenter.hh  log.cc  log.hh  main.cc  map.cc  map.hh  menu.cc  menu.hh  more_entities.cc  more_entities.hh  motion.cc  motion.hh  musicmanager.cc  musicmanager.hh  path.cc  (+24 more)
src/ConsoleSource/: CON_console.c  CON_console.h  CON_consolecommands.c  CON_consolecommands.h  DT_drawtext.c  DT_drawtext.h  Makefile.am
