pkgdatadir = $(datadir)/games/@PACKAGE@/graphics/powerups

pkgdata_DATA = blue_1UP.png green_s.png purple_ss.png \
               red_b.png \
		powerup_normal.png powerup_larger.png powerup_smaller.png \
		lightblue_-1000.png \
		lightblue_-500.png \
		lightblue_-100.png \
		lightblue_100.png \
		lightblue_500.png \
		lightblue_1000.png \
		yellow_steallife.png


EXTRA_DIST = $(pkgdata_DATA)
